- mentionSelect function default constructor coded for multiple triggers - fixed issue where search function for label starting with trigger char doesn't work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@ and content editable fields. Try entering some @names below.</p>
 <div [mention]="items" class="form-control" contenteditable="true" style="border:1px lightgrey solid;min-height:88px"></div>
 
 <h3>Content Editable with Multiple Triggers (@, #)</h3>
-<div [mention]="[{charTrigger: '@', items: items}, {charTrigger: '#', items: tagsItems}]" class="form-control" contenteditable="true" style="border:1px lightgrey solid;min-height:88px"></div>
+<div [mention]="[{charTrigger: '@', items: items}, {charTrigger: '#', items: tagsItems, startsWithCharTrigger: true}]" class="form-control" contenteditable="true" style="border:1px lightgrey solid;min-height:88px"></div>
 
 <!--<h3>Embedded Editor</h3>-->
 <!--<app-demo-tinymce></app-demo-tinymce>-->
