- Custom appearance example added - fixed demo-template.component

--- a/src/app/demo-template/demo-template.component.html
+++ b/src/app/demo-template/demo-template.component.html
@@ -7,5 +7,5 @@
 
 <h3>Input</h3>
 <input [mention]="complexItems" class="form-control" type="text"
-       [mentionConfig]="{mentionSelect: format}" 
-       [mentionListTemplate]="mentionListTemplate">
+       [mentionConfig]="{mentionSelect: format}"
+       [mentionListConfig]="{mentionListTemplate: mentionListTemplate}">
