--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,3 +13,20 @@
 ::ng-deep .custom-list li:hover{
   background-color: #f7f7f9;
 }
+
+::ng-deep .pretty-scrollbar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 0;
+  background-color: #f5f5f5;
+}
+
+::ng-deep .pretty-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  background-color: #f5f5f5;
+}
+
+::ng-deep .pretty-scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #c1c1c1;
+}
