--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,9 +18,13 @@
 <div [mention]="[{charTrigger: '@', items: items}, {charTrigger: '#', items: tagsItems, startsWithCharTrigger: true}]"
      class="form-control" contenteditable="true" style="border:1px lightgrey solid;min-height:88px"></div>
 
-<h3>Content Editable with auto-complete list custom appearance</h3>
-<div [mention]="items" [mentionListConfig]="{headerTemplate: customHeader, listClasses: 'custom-list'}" class="form-control" contenteditable="true"
-     style="border:1px lightgrey solid;min-height:88px"></div>.
+<h3>Content Editable with customized appearance list </h3>
+<div [mention]="items" [mentionListConfig]="{headerTemplate: customHeader, listClasses: 'scrollable-menu pretty-scrollbar custom-list'}" class="form-control" contenteditable="true"
+     style="border:1px lightgrey solid;min-height:88px"></div>
+
+<h3>Active on Hover</h3>
+<div [mention]="items" [mentionListConfig]="{activeOnHover: true}" class="form-control" contenteditable="true"
+     style="border:1px lightgrey solid;min-height:88px"></div>
 
 <ng-template #customHeader>
   <div class="header" style="user-select: none;">
