- item template list param now can be configured independently for every char trigger.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,12 +26,24 @@
 <div [mention]="items" [mentionListConfig]="{activeOnHover: true}" class="form-control" contenteditable="true"
      style="border:1px lightgrey solid;min-height:88px"></div>
 
+<h3>Content Editable with Multiple Triggers and Item Templates (@, #)</h3>
+<div [mention]="[{charTrigger: '@', items: items, itemTemplate: userTemplate}, {charTrigger: '#', items: tagsItems, startsWithCharTrigger: true, itemTemplate: tagsTemplate}]"
+     class="form-control" contenteditable="true" style="border:1px lightgrey solid;min-height:88px"></div>
+
 <ng-template #customHeader>
   <div class="header" style="user-select: none;">
     <span><strong>↑</strong> <strong>↓</strong> to navigate</span>
     <span><strong>↵</strong> to select</span>
     <span><strong>esc</strong> to dismiss</span>
   </div>
+</ng-template>
+
+<ng-template #userTemplate let-item="item">
+  <strong>@{{item.label}}</strong>
+</ng-template>
+
+<ng-template #tagsTemplate let-item="item">
+  <strong><i>{{item.label}}</i></strong>
 </ng-template>
 
 <!--<h3>Embedded Editor</h3>-->
