- added header/footer templates option for all symbols and per symbol

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,6 +59,12 @@
      class="form-control" contenteditable="true"
      style="border:1px lightgrey solid;min-height:88px"></div>
 
+<h3>Content Editable with customized appearance list an Fixed Positioning</h3>
+<div [mention]="[{charTrigger: '#', items: tagsItems, startsWithCharTrigger: true, spaceSeparated: true}]"
+     [mentionListConfig]="{headerTemplate: customHeader, listClasses: 'scrollable-menu pretty-scrollbar custom-list', position: 'fixed'}"
+     class="form-control" contenteditable="true"
+     style="border:1px lightgrey solid;min-height:88px"></div>
+
 <ng-template #customHeader>
   <div class="header" style="user-select: none;">
     <span><strong>↑</strong> <strong>↓</strong> to navigate</span>
