--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,8 +59,9 @@
      class="form-control" contenteditable="true"
      style="border:1px lightgrey solid;min-height:88px"></div>
 
-<h3>Content Editable with customized appearance list an Fixed Positioning</h3>
-<div [mention]="[{charTrigger: '#', items: tagsItems, startsWithCharTrigger: true, spaceSeparated: true}]"
+<h3>Content Editable with Multiple Triggers and Item Templates (@, #)</h3>
+<div [mention]="[{charTrigger: '@', items: items, itemTemplate: userTemplate},
+      {charTrigger: '#', items: tagsItems, startsWithCharTrigger: true, footerTemplate: customFooter, hideOnNoMatches: false}]"
      [mentionListConfig]="{headerTemplate: customHeader, listClasses: 'scrollable-menu pretty-scrollbar custom-list', position: 'fixed'}"
      class="form-control" contenteditable="true"
      style="border:1px lightgrey solid;min-height:88px"></div>
@@ -70,6 +71,12 @@
     <span><strong>↑</strong> <strong>↓</strong> to navigate</span>
     <span><strong>↵</strong> to select</span>
     <span><strong>esc</strong> to dismiss</span>
+  </div>
+</ng-template>
+
+<ng-template #customFooter let-searchString="searchString">
+  <div class="footer">
+    + Add <span class="badge-default">{{searchString}}</span>
   </div>
 </ng-template>
 
