--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,6 +77,7 @@
 <ng-template #customFooter let-searchString="searchString">
   <div class="footer">
     + Add <span class="badge-default">{{searchString}}</span>
+    <button (mousedown)="onFooterButtonClick($event)">Click me!</button>
   </div>
 </ng-template>
 
